[gd_scene load_steps=12 format=3 uid="uid://0tbimbnpx3ly"]

[ext_resource type="Texture2D" uid="uid://jwlbpu05tp46" path="res://Assets/cat.png" id="1_0kbn3"]
[ext_resource type="Script" path="res://Scripts/cat.gd" id="1_4kj7o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_qwog1"]
atlas = ExtResource("1_0kbn3")
region = Rect2(0, 0, 27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyt5g"]
atlas = ExtResource("1_0kbn3")
region = Rect2(27, 0, 27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_n514p"]
atlas = ExtResource("1_0kbn3")
region = Rect2(108, 0, 27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_nxxkx"]
atlas = ExtResource("1_0kbn3")
region = Rect2(54, 0, 27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_5io2k"]
atlas = ExtResource("1_0kbn3")
region = Rect2(81, 0, 27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_fhpds"]
atlas = ExtResource("1_0kbn3")
region = Rect2(108, 0, 27, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_78bxd"]
atlas = ExtResource("1_0kbn3")
region = Rect2(135, 0, 27, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_5uby2"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_qwog1")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_yyt5g")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n514p")
}],
"loop": true,
"name": &"jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nxxkx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5io2k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fhpds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78bxd")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qwcon"]
radius = 5.99834
height = 11.9967

[node name="cat" type="CharacterBody2D"]
z_index = 3
collision_layer = 6
collision_mask = 5
script = ExtResource("1_4kj7o")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_5uby2")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(7.15256e-07, 6)
rotation = -1.59432
shape = SubResource("CapsuleShape2D_qwcon")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(7.15256e-07, 6)
rotation = -1.59432
shape = SubResource("CapsuleShape2D_qwcon")

[node name="PositionCheckerTimer" type="Timer" parent="."]
wait_time = 0.25

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="PositionCheckerTimer" to="." method="_on_position_checker_timer_timeout"]
